applications/sync-bot/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: syncbot-ingress
  namespace: sync-bot
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: https://www.openeuler.org
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: api.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: sync-bot-service
          servicePort: 80
        path: /sync-bot(/|$)(.*)
  tls:
    - hosts:
        - api.openeuler.openatom.cn
      secretName: api-tls
